# sqlmodel-tutorial

./: app.py  pyproject.toml
src/: app.py  database.py  hero_model.py  team_model.py
