[project]
name = "sqlmodel-tutorial"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kosuke222naito", email = "kosuke.naito.engineer@gmail.com" }
]
dependencies = [
    "sqlmodel>=0.0.19",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sqlmodel_tutorial"]
